--- a/DocumentDBFrontEnd/DocumentDBFrontEnd.csproj
+++ b/DocumentDBFrontEnd/DocumentDBFrontEnd.csproj
@@ -167,7 +167,8 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\ReportingProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\WSReportingOnDocDB - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
